--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,30 @@
 html {
     height: 100%;
 }
+
+/* navbar  */
+#mobile-logo {
+    margin-left: 9em;
+}
+
+@media only screen and (max-width: 500px) {
+    #mobile-logo {
+        display: none;
+    }
+}
+
+#middle-nav {
+    display: none;
+}
+
+.logo {
+    height: 80px;
+    width: 80px
+}
+
+@media only screen and (max-width: 1000px) {
+    .logo {
+        height: 60px;
+        width: 60px
+    }
+}
