--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!doctype html>
 <html lang="en">
 
@@ -7,20 +8,16 @@
     {% block meta %}
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% endblock %}
 
     {% block extra_meta %}
     {% endblock %}
 
-    <title>North Yeast Brewing{% block extra_title %} {% endblock %}</title>
-
     {% block corecss %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
@@ -28,6 +25,7 @@
     {% endblock %}
 
     {% block corejs %}
+    <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
     </script>
@@ -41,131 +39,109 @@
 
     {% block extra_js %}
     {% endblock %}
+
+    <title>North Yeast Brewing{% block extra_title %}{% endblock %}</title>
 </head>
 
 <body>
     <header class="container-fluid fixed-top">
-        <!-- navbar -->
-        <nav class="row">
-            <!-- top nav -->
-            <div class="row nav-top">
-                <div class="col-12 col-lg-6 my-auto py-1 py-lg-0 text-lg-left">
-                    <ul class="social-links">
-                        <li class="list-inline-item">
-                            <a href="https://www.facebook.com/" target="_blank" aria-label="link to Facebook"
-                                rel="noopener"><i class="fab fa-facebook" aria-hidden="true"></i><span
-                                    class="sr-only">Facebook</span></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://twitter.com/" target="_blank" aria-label="link to instagram"
-                                rel="noopener"><i class="fab fa-twitter" aria-hidden="true"></i><span
-                                    class="sr-only">Twitter</span></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://www.youtube.com/" target="_blank" aria-label="link to instagram"
-                                rel="noopener"><i class="fab fa-youtube" aria-hidden="true"></i><span
-                                    class="sr-only">YouTube</span></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="tel:07912312312" aria-label="link to phone number">| <i
-                                    class="fa-solid fa-phone"></i>
-                                07912312312</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-12 col-lg-6 my-auto py-1 py-lg-0">
-                    <ul class="list-inline list-unstyled text-end my-0">
-                        <li class="list-inline-item dropdown">
-                            <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">
-                                <div class="text-center">
-                                    <div><i class="fas fa-user fa-lg"></i></div>
-                                    <p class="my-0">My Account</p>
-                                </div>
-                            </a>
-                            <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                                {% if request.user.is_authenticated %}
-                                {% if request.user.is_superuser %}
-                                <a href="" class="dropdown-item">Product Management</a>
-                                {% endif %}
-                                <a href="" class="dropdown-item">My Profile</a>
-                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                                {% else %}
-                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                                {% endif %}
-                            </div>
-                        </li>
-                        <li class="list-inline-item">
-                            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                                href="">
-                                <div class="text-center">
-                                    <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                                    <p class="my-0">
-                                        {% if grand_total %}
-                                        ${{ grand_total|floatformat:2 }}
-                                        {% else %}
-                                        $0.00
-                                        {% endif %}
-                                    </p>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+            <div class="col-12 col-lg-8 my-auto py-1 py-lg-0 text-center text-lg-left">
+                <ul class="social-links w-100">
+                    <li class="list-inline-item">
+                        <a href="https://www.facebook.com/" target="_blank" aria-label="link to Facebook"
+                            rel="noopener"><i class="fab fa-facebook fa-lg" aria-hidden="true"></i><span
+                                class="sr-only">Facebook</span></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://twitter.com/" target="_blank" aria-label="link to instagram" rel="noopener"><i
+                                class="fab fa-twitter fa-lg" aria-hidden="true"></i><span
+                                class="sr-only">Twitter</span></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.youtube.com/" target="_blank" aria-label="link to instagram"
+                            rel="noopener"><i class="fab fa-youtube fa-lg" aria-hidden="true"></i><span
+                                class="sr-only">YouTube</span></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <span> | </span>
+                        <a href="tel:07912312312" aria-label="link to phone number">
+                            07912312312</a>
+                    </li>
+                </ul>
             </div>
-            <!-- middle nav -->
-            <div class="row nav-middle">
-                <div class="col-lg-6 text-end">
-                    <img src="" alt="North Yeast Brewing Logo">
-                </div>
-                <div class="col-lg-6 my-auto py-1 py-lg-0">
-                    <form method="GET" action="">
-                        <div class="input-group w-50">
-                            <input class="form-control border border-black rounded-0" type="text" name="q"
-                                placeholder="Search our site">
-                            <div class="input-group-append">
-                                <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                                    <span class="icon">
-                                        <i class="fas fa-search"></i>
-                                    </span>
-                                </button>
+
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                    <li class="list-inline-item dropdown">
+                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            <div class="text-center">
+                                <div><i class="fas fa-user fa-lg"></i></div>
+                                <p class="my-0">My Account</p>
                             </div>
+                        </a>
+                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                            {% if request.user.is_authenticated %}
+                            {% if request.user.is_superuser %}
+                            <a href="" class="dropdown-item">Product Management</a>
+                            {% endif %}
+                            <a href="" class="dropdown-item">My Profile</a>
+                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                            {% else %}
+                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            {% endif %}
                         </div>
-                    </form>
-                </div>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                            href="">
+                            <div class="text-center">
+                                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                                <p class="my-0">
+                                    {% if grand_total %}
+                                    ${{ grand_total|floatformat:2 }}
+                                    {% else %}
+                                    $0.00
+                                    {% endif %}
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
-            <!-- Bottom nav-->
-            <nav class="navbar nav-bottom navbar-expand-lg">
-                <div class="container-fluid text-center">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-link" href="#">Home</a>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                    Beers
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                </ul>
-                            </li>
-                            <a class="nav-link" href="#">Tap room</a>
-                            <a class="nav-link" href="#">Our Story</a>
-                            <a class="nav-link" href="#">Events</a>
-                            <a class="nav-link" href="#">Contact Us</a>
+        </div>
+        <div class="row nav-middle d-lg-flex" id="middle-nav">
+            <div class="col-lg-6 d-flex justify-content-end">
+                <img class="logo" src="media/blacklogo.svg" alt="North Yeast Brewing Logo">
+            </div>
+            <div class="col-lg-6 my-auto py-1 py-lg-0">
+                <form method="GET" action="">
+                    <div class="input-group w-50">
+                        <input class="form-control border border-black rounded-0" type="text" name="q"
+                            placeholder="Search our site">
+                        <div class="input-group-append">
+                            <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                                <span class="icon">
+                                    <i class="fas fa-search"></i>
+                                </span>
+                            </button>
                         </div>
                     </div>
-                </div>
+                </form>
+            </div>
+        </div>
+        <div class="row bg-white">
+            <nav class="navbar navbar-expand-lg navbar-light w-100">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+                    aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                {% include 'includes/mobile-nav.html' %}
+                {% include 'includes/main-nav.html' %}
             </nav>
-            <!-- navbar -->
+        </div>
     </header>
 
     {% if messages %}
