maint: comments added

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,3 +1,4 @@
+<!-- large screen bottom navbar -->
 <div class="collapse navbar-collapse row" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto w-100">
         <li class="nav-item">
@@ -63,7 +64,6 @@
                 {% endif %}
             </div>
         </li>
-
-
     </ul>
 </div>
+<!-- ./large screen bottom navbar -->
