--- a/templates/includes/mobile-nav.html
+++ b/templates/includes/mobile-nav.html
@@ -1,6 +1,8 @@
 <div class="text-center d-lg-none">
     <img class="logo" src="media/blacklogo.svg" alt="North Yeast Brewing Logo" id="mobile-logo">
 </div>
+
+<!-- lmedium and small screen bottom navbar -->
 <ul>
     <li class="list-inline-item">
         <a class="nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true"
@@ -44,3 +46,4 @@
         </a>
     </li>
 </ul>
+<!-- l./medium and small screen bottom navbar -->
