--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,9 @@
 </head>
 
 <body>
+    <!-- header -->
     <header class="container-fluid fixed-top">
+        <!-- top navbar   -->
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-8 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <ul class="social-links w-100">
@@ -112,6 +114,9 @@
                 </ul>
             </div>
         </div>
+        <!-- ./top navar -->
+
+        <!-- middle navbar -->
         <div class="row nav-middle d-lg-flex" id="middle-nav">
             <div class="col-lg-6 d-flex justify-content-end">
                 <img class="logo" src="media/blacklogo.svg" alt="North Yeast Brewing Logo">
@@ -132,6 +137,9 @@
                 </form>
             </div>
         </div>
+        <!-- ./middle navbar -->
+
+        <!-- bottom navbar and nav list  -->
         <div class="row bg-white">
             <nav class="navbar navbar-expand-lg navbar-light w-100">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
@@ -142,7 +150,10 @@
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
+        <!-- ./bottom navbar and nav list  -->
+
     </header>
+    <!-- ./header -->
 
     {% if messages %}
     <div class="message-container"></div>
@@ -154,6 +165,71 @@
     {% block content %}
     {% endblock %}
 
+    <footer class="py-5">
+        <div class="row">
+            <div class="col-md-2 col-sm-12 text-center mt-sm-5 mt-md-0">
+                <img class="logo" src="media/blacklogo.svg" alt="North Yeast Brewing Logo">
+            </div>
+
+            <div class="col-md-2 col-sm-12 text-center mt-sm-5 mt-md-0">
+                <h5>Need Help?</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Terms and Conditions</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Privacy Policy</a></li>
+                </ul>
+            </div>
+
+            <div class="col-md-2 col-sm-12 text-center mt-sm-5 mt-md-0">
+                <h5>Get in Touch</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Contact Us</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Need a Booking</a></li>
+                </ul>
+            </div>
+
+            <div class="col-md-4 col-sm-12 offset-md-1 text-center text-lg-left mt-sm-5 mt-md-0">
+                <form>
+                    <h5>Subscribe to our newsletter</h5>
+                    <p>Get the lastest deals and events</p>
+                    <div class="d-flex w-100 gap-2">
+                        <!-- <label for="newsletter1" class="visually-hidden">Email address</label> -->
+                        <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                        <button class="btn btn-primary" type="button">Subscribe</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="d-flex justify-content-between py-4 my-4 border-top row mt-sm-5">
+            <div class="col-sm-12 col-md-6 justify-content-xs-center justify-content-md-end">
+                <p>© 2022 North Yeast Brewing, Inc. All rights reserved.</p>
+            </div>
+            <div class=" col-sm-12 col-md-6 d-flex justify-content-xs-center justify-content-md-end">
+                <ul class="social-links text-center">
+                    <li class="list-inline-item">
+                        <a href="https://www.facebook.com/" target="_blank" aria-label="link to Facebook"
+                            rel="noopener"><i class="fab fa-facebook fa-lg" aria-hidden="true"></i><span
+                                class="sr-only">Facebook</span></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://twitter.com/" target="_blank" aria-label="link to instagram" rel="noopener"><i
+                                class="fab fa-twitter fa-lg" aria-hidden="true"></i><span
+                                class="sr-only">Twitter</span></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.youtube.com/" target="_blank" aria-label="link to instagram"
+                            rel="noopener"><i class="fab fa-youtube fa-lg" aria-hidden="true"></i><span
+                                class="sr-only">YouTube</span></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <span> | </span>
+                        <a href="tel:07912312312" aria-label="link to phone number">
+                            07912312312</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     {% block postloadjs %}
     {% endblock %}
 
