Feat: hero image added to home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,8 +1,35 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
 
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+{% endblock %}
+
+
+{% block hero %}
+<!-- hero -->
+<section>
+    <div class="px-4 py-5 text-center d-flex align-items-end justify-content-center" id="index-hero-image">
+        <div class="overlay hero-call-to-action mb-3">
+            <h1 class="display-5 fw-bold">Craft Beer!</h1>
+            <div class="col-lg-6 mx-auto">
+                <p class="lead mb-4">Here at North Yeast Brewing
+                    we have a great selection of beer,
+                    ales and stouts for you to enjoy.
+                    check out our selection here</p>
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
+                    <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Shop Now</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- ./hero -->
 {% endblock %}
 
 {% block content %}
