--- a/templates/base.html
+++ b/templates/base.html
@@ -169,7 +169,7 @@
 
     {% endblock %}
     <!-- footer -->
-    <footer class="py-5">
+    <footer class="new-section-margin ">
         <div class="row">
             <div class="col-md-2 col-sm-12 text-center mt-sm-5 mt-md-0">
                 <img class="logo" src="media/blacklogo.svg" alt="North Yeast Brewing Logo">
