style: added to features to home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -36,8 +36,8 @@
 <section class="new-section-margin w-100">
     <div class="row mt-10 ">
         <div class="col-lg-6 col-xs-12 d-flex align-items-end justify-content-center feat-container d-md-none">
-            <div class="feature px-4 py-5 text-center d-flex align-items-end justify-content-center" id="book-feature">
-                <div class="mb-3 text-center">
+            <div class="feature px-4 py-5 text-center d-flex align-items-end justify-content-center" id="beer-feature">
+                <div class="mb-3 text-center overlay">
                     <h2>Caft Beer</h2>
                     <div class="col-lg-6 mx-auto">
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
@@ -49,16 +49,18 @@
         </div>
 
         <div class="col-lg-6 col-xs-12 d-flex align-items-end justify-content-center feat-container">
-            <div class="feature px-4 py-5 text-center d-flex align-items-end justify-content-center" id="book-feature">
-                <div class="mb-3 text-center">
+            <div class="feature px-4 py-5 text-center d-flex align-items-end justify-content-center"
+                id="tap-room-feature">
+                <div class="mb-3 text-center overlay">
                     <h2>The Taproom</h2>
                     <div class="col-lg-6 mx-auto">
-                        <p class="mb-4 d-none d-md-flex">Here at North Yeast Brewing
-                            we have a great selection of beer,
-                            ales and stouts for you to enjoy.
-                            check out our selection here</p>
+                        <p class="mb-4 d-none d-md-flex">Come and check out our Taproom.
+                            we have a great selection of
+                            draught craft beer for you
+                            to enjoy. We are open 7 days a
+                            week so get yourself down.</p>
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
-                            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Shop Now</button>
+                            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Book Now</button>
                         </div>
                     </div>
                 </div>
@@ -67,7 +69,7 @@
         <div class="col-lg-6 col-xs-12 d-flex align-items-end justify-content-center">
             <div class="feature px-4 py-5 text-center d-flex align-items-end justify-content-center"
                 id="events-feature">
-                <div class="mb-3 text-center">
+                <div class="mb-3 text-center overlay">
                     <h2>Hope to see you there!</h2>
                     <div class="col-lg-6 mx-auto">
                         <p class="mb-4 d-none d-md-flex">
