--- a/templates/base.html
+++ b/templates/base.html
@@ -118,8 +118,9 @@
 
         <!-- middle navbar -->
         <div class="row nav-middle bg-white d-lg-flex" id="middle-nav">
-            <div class="col-lg-6 d-flex justify-content-end">
-                <img class="logo" src="media/blacklogo.svg" alt="North Yeast Brewing Logo">
+            <div class="col-lg-6 d-flex justify-content-end"><a href="{% url 'home' %}">
+                    <img class="logo" src="media/blacklogo.svg" alt="North Yeast Brewing Logo">
+                </a>
             </div>
             <div class="col-lg-6 my-auto py-1 py-lg-0">
                 <form method="GET" action="">
