added products page file views and urls

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,9 +22,9 @@
                     we have a great selection of beer,
                     ales and stouts for you to enjoy.
                     check out our selection here</p>
-                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
+                <a href="{% url 'products' %}" class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
                     <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Shop Now</button>
-                </div>
+                </a>
             </div>
         </div>
     </div>
