feat: hero image added to products.html

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -12,7 +12,24 @@
 
 
 {% block hero %}
-
+<!-- hero -->
+<section class="mt-10">
+    <div class="px-4 py-5 text-center d-flex align-items-end justify-content-center" id="index-hero-image">
+        <div class="overlay hero-call-to-action mb-3 d-none d-md-block">
+            <h1 class="display-5 fw-bold">The Taproom!</h1>
+            <div class="col-lg-6 mx-auto">
+                <p class="mb-4 d-md-flex d-none">Check out our range of craft beer in the Taproom.
+                    All our bottles and cans are available to
+                    take away and theres 9 taps to choose from.
+                    Ecommerce and home delivery coming soon</p>
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
+                    <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Book Now</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- ./hero -->
 {% endblock %}
 
 {% block content %}
