feat: products section added to products.html

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -2,7 +2,8 @@
 <div class="collapse navbar-collapse row" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto w-100">
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black text-center" href="#" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black text-center" href="{% url 'home' %}"
+                aria-expanded="false">
                 Home
             </a>
         </li>
