--- a/templates/includes/mobile-nav.html
+++ b/templates/includes/mobile-nav.html
@@ -1,5 +1,6 @@
+{% load static %}
 <div class="text-center d-lg-none">
-    <img class="logo" src="media/blacklogo.svg" alt="North Yeast Brewing Logo" id="mobile-logo">
+    <img class="logo" src="{% static 'images/blacklogo.svg' %}" alt="North Yeast Brewing Logo" id="mobile-logo">
 </div>
 
 <!-- lmedium and small screen bottom navbar -->
