--- a/static/css/base.css
+++ b/static/css/base.css
@@ -68,11 +68,22 @@ body {
 /* Hero images */
 
 /* Index.html */
+
+.hero {
+    background-size: cover;
+    color: #fafafa;
+    height: 50vh;
+}
+
 #index-hero-image {
     background: url('/media/banner-1.jpg') no-repeat center center;
     background-size: cover;
     color: #fafafa;
     height: 50vh;
+}
+
+#products-hero-image {
+    background-image: url('/media/banner3.png');
 }
 
 /* Index Features */
@@ -139,4 +150,11 @@ body {
         height: 100%;
         width: 100%;
     }
+}
+
+/* Product page */
+
+.card_descriptive_words h5 {
+    margin-left: 8px;
+
 }
