--- a/templates/base.html
+++ b/templates/base.html
@@ -119,7 +119,7 @@
         <!-- middle navbar -->
         <div class="row nav-middle bg-white d-lg-flex" id="middle-nav">
             <div class="col-lg-6 d-flex justify-content-end"><a href="{% url 'home' %}">
-                    <img class="logo" src="media/blacklogo.svg" alt="North Yeast Brewing Logo">
+                    <img class="logo" src="{% static 'images/blacklogo.svg' %}" alt="North Yeast Brewing Logo">
                 </a>
             </div>
             <div class="col-lg-6 my-auto py-1 py-lg-0">
