--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -38,7 +38,9 @@
         {% for product in products %}
         <div class="col-xl-3 col-lg-4 col-md-6  d-flex justify-content-center">
             <div class="card mb-5" style="width: 18rem;">
-                <img src="{{ product.image_url }}" class="card-img-top" alt="Drink of a {{ product.product_name }}">
+                <a href="{% url 'product_detail' product.id %}">
+                    <img src="{{ product.image_url }}" class="card-img-top" alt="Drink of a {{ product.product_name }}">
+                </a>
                 <div class="card-body">
                     <h4 class="card-title">{{ product.product_name }}</h4>
                     <div class="row d-flex justify-content-center card_descriptive_words">
