--- a/static/css/base.css
+++ b/static/css/base.css
@@ -84,7 +84,30 @@ body {
 
 #products-hero-image {
     background-image: url('/media/banner3.png');
+    object-fit: contain;
 }
+
+
+/* product details page heros */
+
+.product-hero {
+    width: 100%;
+    height: 50vh;
+
+}
+
+.product-overlay {
+    width: 30%;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
 
 /* Index Features */
 .feature {
