--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -27,138 +27,204 @@
 
 
 {% block content %}
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-            <div class="image-container my-5">
-                <a href="{{ product.image_url }}" target="_blank">
-                    <img class="card-img-top img-fluid" src="{{ product.image_url }}" alt="{{ product.name }}">
-                </a>
+<section>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+                <div class="image-container my-5">
+                    <a href="{{ product.image_url }}" target="_blank">
+                        <img class="card-img-top img-fluid" src="{{ product.image_url }}" alt="{{ product.name }}">
+                    </a>
+                </div>
             </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-            <div class="product-details-container mb-5 mt-md-5 d-flex flex-column justify-content-between">
-                <h2 class=" mb-2">{{ product.product_name }}</h2>
-                <div class="row mb-5 card_descriptive_words">
-                    {% for adjective in product.descriptive_words %}
-                    <h4 class="descritive_product_words">{{ adjective }}.</h4>
-                    {% endfor %}
-                </div>
-
-                <div class="mb-2">
-                    <h3>Colour</h3>
-                    <div class="color-scale d-flex justify-content-between">
-                        {% if product.color == 1 %}
-                        <div class="color-scale-marker color-scale-marker-active" id="color-1"></div>
-                        {% else %}
-                        <div class="color-scale-marker" id="color-1"></div>
-                        {% endif %}
-
-                        {% if product.color == 2 %}
-                        <div class="color-scale-marker color-scale-marker-active" id="color-2"></div>
-                        {% else %}
-                        <div class="color-scale-marker" id="color-2"></div>
-                        {% endif %}
-
-                        {% if product.color == 3 %}
-                        <div class="color-scale-marker color-scale-marker-active" id="color-3"></div>
-                        {% else %}
-                        <div class="color-scale-marker" id="color-3"></div>
-                        {% endif %}
-
-                        {% if product.color == 4 %}
-                        <div class="color-scale-marker color-scale-marker-active" id="color-4"></div>
-                        {% else %}
-                        <div class="color-scale-marker" id="color-4"></div>
-                        {% endif %}
-
-                        {% if product.color == 5 %}
-                        <div class="color-scale-marker color-scale-marker-active" id="color-5"></div>
-                        {% else %}
-                        <div class="color-scale-marker" id="color-5"></div>
-                        {% endif %}
-
-                        {% if product.color == 6 %}
-                        <div class="color-scale-marker color-scale-marker-active" id="color-6"></div>
-                        {% else %}
-                        <div class="color-scale-marker" id="color-6"></div>
-                        {% endif %}
-
-                        {% if product.color == 7 %}
-                        <div class="color-scale-marker color-scale-marker-active" id="color-7"></div>
-                        {% else %}
-                        <div class="color-scale-marker" id="color-7"></div>
-                        {% endif %}
-
-                        {% if product.color == 8 %}
-                        <div class="color-scale-marker color-scale-marker-active" id="color-8"></div>
-                        {% else %}
-                        <div class="color-scale-marker" id="color-8"></div>
-                        {% endif %}
-
-                        {% if product.color == 9 %}
-                        <div class="color-scale-marker color-scale-marker-active" id="color-9"></div>
-                        {% else %}
-                        <div class="color-scale-marker" id="color-9"></div>
-                        {% endif %}
-
-                        {% if product.color == 10 %}
-                        <div class="color-scale-marker color-scale-marker-active" id="color-10"></div>
-                        {% else %}
-                        <div class="color-scale-marker" id="color-10"></div>
-                        {% endif %}
-
-                        {% if product.color == 11 %}
-                        <div class="color-scale-marker color-scale-marker-active" id="color-11"></div>
-                        {% else %}
-                        <div class="color-scale-marker" id="color-11"></div>
-                        {% endif %}
-
-                        {% if product.color == 12 %}
-                        <div class="color-scale-marker color-scale-marker-active" id="color-12"></div>
-                        {% else %}
-                        <div class="color-scale-marker" id="color-12"></div>
-                        {% endif %}
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="product-details-container mb-5 mt-md-5 d-flex flex-column justify-content-between">
+                    <h2 class=" mb-2">{{ product.product_name }}</h2>
+                    <div class="row mb-5 card_descriptive_words">
+                        {% for adjective in product.descriptive_words %}
+                        <h4 class="descritive_product_words">{{ adjective }}.</h4>
+                        {% endfor %}
                     </div>
-                </div>
 
-                <div class="mb-2">
-                    <h3>Hoppyniess</h3><br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="{{ product.hoppyness }}"
-                            aria-valuemin="0" aria-valuemax="100" style="width:{{ product.hoppyness }}%">
-                            <span class="sr-only">{{ product.hoppyness }}% Complete</span>
+                    <div class="mb-2">
+                        <h3>Colour</h3>
+                        <div class="color-scale d-flex justify-content-between">
+                            {% if product.color == 1 %}
+                            <div class="color-scale-marker color-scale-marker-active" id="color-1"></div>
+                            {% else %}
+                            <div class="color-scale-marker" id="color-1"></div>
+                            {% endif %}
+
+                            {% if product.color == 2 %}
+                            <div class="color-scale-marker color-scale-marker-active" id="color-2"></div>
+                            {% else %}
+                            <div class="color-scale-marker" id="color-2"></div>
+                            {% endif %}
+
+                            {% if product.color == 3 %}
+                            <div class="color-scale-marker color-scale-marker-active" id="color-3"></div>
+                            {% else %}
+                            <div class="color-scale-marker" id="color-3"></div>
+                            {% endif %}
+
+                            {% if product.color == 4 %}
+                            <div class="color-scale-marker color-scale-marker-active" id="color-4"></div>
+                            {% else %}
+                            <div class="color-scale-marker" id="color-4"></div>
+                            {% endif %}
+
+                            {% if product.color == 5 %}
+                            <div class="color-scale-marker color-scale-marker-active" id="color-5"></div>
+                            {% else %}
+                            <div class="color-scale-marker" id="color-5"></div>
+                            {% endif %}
+
+                            {% if product.color == 6 %}
+                            <div class="color-scale-marker color-scale-marker-active" id="color-6"></div>
+                            {% else %}
+                            <div class="color-scale-marker" id="color-6"></div>
+                            {% endif %}
+
+                            {% if product.color == 7 %}
+                            <div class="color-scale-marker color-scale-marker-active" id="color-7"></div>
+                            {% else %}
+                            <div class="color-scale-marker" id="color-7"></div>
+                            {% endif %}
+
+                            {% if product.color == 8 %}
+                            <div class="color-scale-marker color-scale-marker-active" id="color-8"></div>
+                            {% else %}
+                            <div class="color-scale-marker" id="color-8"></div>
+                            {% endif %}
+
+                            {% if product.color == 9 %}
+                            <div class="color-scale-marker color-scale-marker-active" id="color-9"></div>
+                            {% else %}
+                            <div class="color-scale-marker" id="color-9"></div>
+                            {% endif %}
+
+                            {% if product.color == 10 %}
+                            <div class="color-scale-marker color-scale-marker-active" id="color-10"></div>
+                            {% else %}
+                            <div class="color-scale-marker" id="color-10"></div>
+                            {% endif %}
+
+                            {% if product.color == 11 %}
+                            <div class="color-scale-marker color-scale-marker-active" id="color-11"></div>
+                            {% else %}
+                            <div class="color-scale-marker" id="color-11"></div>
+                            {% endif %}
+
+                            {% if product.color == 12 %}
+                            <div class="color-scale-marker color-scale-marker-active" id="color-12"></div>
+                            {% else %}
+                            <div class="color-scale-marker" id="color-12"></div>
+                            {% endif %}
                         </div>
                     </div>
-                </div>
 
-                <div>
-                    <h3 class="mb-2">Maltynaess</h3><br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="{{ product.maltyness }}"
-                            aria-valuemin="0" aria-valuemax="100" style="width:{{ product.maltyness }}%">
-                            <span class="sr-only">{{ product.maltyness }}% Complete</span>
+                    <div class="mb-2">
+                        <h3>Hoppyniess</h3><br>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="{{ product.hoppyness }}"
+                                aria-valuemin="0" aria-valuemax="100" style="width:{{ product.hoppyness }}%">
+                                <span class="sr-only">{{ product.hoppyness }}% Complete</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div>
-                    <h3 class="mb-2">Bitterness</h3><br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="{{ product.bitterness }}"
-                            aria-valuemin="0" aria-valuemax="100" style="width:{{ product.bitterness }}%">
-                            <span class="sr-only">{{ product.bitterness }}% Complete</span>
+
+                    <div>
+                        <h3 class="mb-2">Maltynaess</h3><br>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="{{ product.maltyness }}"
+                                aria-valuemin="0" aria-valuemax="100" style="width:{{ product.maltyness }}%">
+                                <span class="sr-only">{{ product.maltyness }}% Complete</span>
+                            </div>
                         </div>
                     </div>
-                </div>
+                    <div>
+                        <h3 class="mb-2">Bitterness</h3><br>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="{{ product.bitterness }}"
+                                aria-valuemin="0" aria-valuemax="100" style="width:{{ product.bitterness }}%">
+                                <span class="sr-only">{{ product.bitterness }}% Complete</span>
+                            </div>
+                        </div>
+                    </div>
 
+                </div>
             </div>
         </div>
     </div>
+</section>
 
-    {% endblock %}
+<section id="brew-sheet-section">
+    <div class="row justify-content-center">
+        <div class="text-center white-text">
+            <h2> Brew Sheet </h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-4 d-flex justify-content-end">
+            <img class="brew-sheet-image" src="{% static 'images/istlye.png' %}" alt="style image">
+        </div>
+        <div class="col-lg-4 col-8 d-flex">
+            <h3 class="align-self-center white-text">{{ product.style }}</h3>
+        </div>
+        <div class="col-lg-2 col-4 d-flex justify-content-end">
+            <img class="brew-sheet-image" src="{% static 'images/igrain.png' %}" alt="style image">
+        </div>
+        <div class="col-lg-4 col-8 d-flex white-text">
+            {% for malt in product.malts %}
+            <h3 class="align-self-center ml-2">
+                {% if not forloop.last %}
+                {{ malt }},
+                {% else %}
+                {{ malt }}
+                {% endif %}
+                {% endfor %}
+            </h3>
+        </div>
+        <div class="col-lg-2 col-4 d-flex justify-content-end">
+            <img class="brew-sheet-image" src="{% static 'images/iPERCENTAGE.png' %}" alt="style image">
+        </div>
+        <div class="col-lg-4 col-8 d-flex">
+            <h3 class="align-self-center white-text">{{ product.percentage }}%</h3>
+        </div>
+        <div class="col-lg-2 col-4 d-flex justify-content-end">
+            <img class="brew-sheet-image" src="{% static 'images/ihop.png' %}" alt="style image">
+        </div>
+        <div class="col-lg-4 col-8 d-flex white-text">
+            {% for hop in product.hops %}
+            <h3 class="align-self-center ml-2">
+                {% if not forloop.last %}
+                {{ hop }},
+                {% else %}
+                {{ hop }}
+                {% endif %}
+                {% endfor %}
+            </h3>
+        </div>
+        <div class="col-lg-2 col-4 d-flex justify-content-end">
+            <img class="brew-sheet-image" src="{% static 'images/ibrew.png' %}" alt="style image">
+        </div>
+        <div class="col-lg-4 col-8 d-flex">
+            <h3 class="align-self-center white-text">{{ product.ibu }}%</h3>
+        </div>
+        <div class="col-lg-2 col-4 d-flex justify-content-end">
+            <img class="brew-sheet-image" src="{% static 'images/iog.png' %}" alt="style image">
+        </div>
+        <div class="col-lg-4 col-8 d-flex white-text">
+            <h3 class="align-self-center">{{ product.og }}%</h3>
+        </div>
 
-    {% block extra_js %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    {% endblock %}
+    </div>
+
+</section>
+
+{% endblock %}
+
+{% block extra_js %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+{% endblock %}
