--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -165,16 +165,16 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-4 d-flex justify-content-end">
+        <div class="col-lg-2 col-4 d-flex justify-content-end mt-2">
             <img class="brew-sheet-image" src="{% static 'images/istlye.png' %}" alt="style image">
         </div>
-        <div class="col-lg-4 col-8 d-flex">
+        <div class="col-lg-4 col-8 d-flex mt-2">
             <h3 class="align-self-center white-text">{{ product.style }}</h3>
         </div>
-        <div class="col-lg-2 col-4 d-flex justify-content-end">
+        <div class="col-lg-2 col-4 d-flex justify-content-end mt-2">
             <img class="brew-sheet-image" src="{% static 'images/igrain.png' %}" alt="style image">
         </div>
-        <div class="col-lg-4 col-8 d-flex white-text">
+        <div class="col-lg-4 col-8 d-flex white-text mt-2">
             {% for malt in product.malts %}
             <h3 class="align-self-center ml-2">
                 {% if not forloop.last %}
@@ -185,16 +185,16 @@
                 {% endfor %}
             </h3>
         </div>
-        <div class="col-lg-2 col-4 d-flex justify-content-end">
+        <div class="col-lg-2 col-4 d-flex justify-content-end mt-2">
             <img class="brew-sheet-image" src="{% static 'images/iPERCENTAGE.png' %}" alt="style image">
         </div>
-        <div class="col-lg-4 col-8 d-flex">
+        <div class="col-lg-4 col-8 d-flex mt-2">
             <h3 class="align-self-center white-text">{{ product.percentage }}%</h3>
         </div>
-        <div class="col-lg-2 col-4 d-flex justify-content-end">
+        <div class="col-lg-2 col-4 d-flex justify-content-end mt-2">
             <img class="brew-sheet-image" src="{% static 'images/ihop.png' %}" alt="style image">
         </div>
-        <div class="col-lg-4 col-8 d-flex white-text">
+        <div class="col-lg-4 col-8 d-flex white-text mt-2">
             {% for hop in product.hops %}
             <h3 class="align-self-center ml-2">
                 {% if not forloop.last %}
@@ -205,16 +205,16 @@
                 {% endfor %}
             </h3>
         </div>
-        <div class="col-lg-2 col-4 d-flex justify-content-end">
+        <div class="col-lg-2 col-4 d-flex justify-content-end mt-2">
             <img class="brew-sheet-image" src="{% static 'images/ibrew.png' %}" alt="style image">
         </div>
-        <div class="col-lg-4 col-8 d-flex">
+        <div class="col-lg-4 col-8 d-flex mt-2">
             <h3 class="align-self-center white-text">{{ product.ibu }}%</h3>
         </div>
-        <div class="col-lg-2 col-4 d-flex justify-content-end">
+        <div class="col-lg-2 col-4 d-flex justify-content-end mt-2">
             <img class="brew-sheet-image" src="{% static 'images/iog.png' %}" alt="style image">
         </div>
-        <div class="col-lg-4 col-8 d-flex white-text">
+        <div class="col-lg-4 col-8 d-flex white-text mt-2">
             <h3 class="align-self-center">{{ product.og }}%</h3>
         </div>
 
@@ -222,6 +222,10 @@
 
 </section>
 
+{% endblock %}
+
+{% block extra_css %}
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 {% endblock %}
 
 {% block extra_js %}
