--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -17,7 +17,31 @@
         <div class="centered overlay text-center product-overlay d-none d-lg-block">
             <h1>{{ product.product_name }}</h1>
             <p>{{ product.description }}</p>
-            <a href="#" class="btn btn-primary">Buy Now</a>
+            <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
+                {% csrf_token %}
+                <div class="form-row">
+                    <div class="col-12">
+                        <p class="mt-3"><strong>Quantity:</strong></p>
+                        <div class="form-group text-center">
+                            <div class="input-group">
+                                <input class="form-control qty_input" type="number" name="quantity" value="1" min="1"
+                                    max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                            <span class="icon">
+                                <i class="fas fa-chevron-left"></i>
+                            </span>
+                            <span class="text-uppercase btn btn-secondary">Keep Shopping</span>
+                        </a>
+                        <input type="submit" class="btn btn-primary rounded-0 text-uppercase mt-5" value="Add to Bag">
+                    </div>
+                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                </div>
+            </form>
         </div>
     </div>
 </section>
