--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -57,6 +57,12 @@
                     <input type="submit" class="btn btn-primary rounded-0 text-uppercase mt-5" value="Add to Cart">
                 </div>
                 <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                {% if request.user.is_superuser %}
+                <small class="ml-3">
+                    <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                    <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                </small>
+                {% endif %}
         </div>
         </form>
     </div>
