--- a/templates/base.html
+++ b/templates/base.html
@@ -205,13 +205,15 @@
             </div>
 
             <div class="col-md-4 col-sm-12 offset-md-1 text-center text-lg-left mt-sm-5 mt-md-0">
-                <form>
+                <form method="Post" action="{% url 'newsletter' %}" id="newsletter-signup">
+                    {% csrf_token %}
                     <h5>Subscribe to our newsletter</h5>
                     <p>Get the lastest deals and events</p>
                     <div class="d-flex w-100 gap-2">
                         <!-- <label for="newsletter1" class="visually-hidden">Email address</label> -->
-                        <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-                        <button class="btn btn-primary" type="button">Subscribe</button>
+                        <input id="email" type="text" name=newsletter class="form-control" placeholder="Email address"
+                            required>
+                        <button class="btn btn-primary" type="submit">Subscribe</button>
                     </div>
                 </form>
             </div>
