added events app template views and urls

--- a/newsletter/templates/newsletter/view_email_list.html
+++ b/newsletter/templates/newsletter/view_email_list.html
@@ -7,7 +7,7 @@
     <table>
         <thead>
             <tr>
-                <th colspan="2">Mailing list</th>
+                <th>Mailing list</th>
             </tr>
         </thead>
         <tbody>
