--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -36,7 +36,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="font-weight-bold nav-link text-center" href="#" aria-expanded="false">
+            <a class="font-weight-bold nav-link text-center" href="{% url 'events' %}" aria-expanded="false">
                 Events
             </a>
         </li>
@@ -58,6 +58,9 @@
                 {% if request.user.is_authenticated %}
                 {% if request.user.is_superuser %}
                 <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                <a href="{% url 'send_newsletter' %}" class="dropdown-item">Create Newsletter</a>
+                <a href="{% url 'view_email_list' %}" class="dropdown-item">Newsletter signups</a>
+
                 {% endif %}
                 <a href="" class="dropdown-item">My Profile</a>
                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
