contact app started html template urls and view added

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -42,7 +42,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="font-weight-bold nav-link text-center" href="#" aria-expanded="false">
+            <a class="font-weight-bold nav-link text-center" href="{% url 'contact' %}" aria-expanded="false">
                 Contact Us
             </a>
         </li>
