--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -38,11 +38,11 @@
 <!-- Enquiry Section -->
 <section class="new-section-margin w-100">
     <div class="container">
-        <div class="contact-forms">
-            <div class="text-center">
-                <h1>Make an Enqiry</h1>
-            </div>
 
+        <div class="text-center">
+            <h1>Make an Enqiry</h1>
+        </div>
+        <div class="contact-forms">
             <!-- Contact Form -->
             <form method="POST" action="" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
@@ -53,7 +53,82 @@
             </form>
         </div>
     </div>
-
 </section>
 <!-- ./Enquiry Section -->
+
+<!-- Contact info Section -->
+<section>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-5 offset-1">
+                <div class="info-content">
+                    <ul>
+                        <h2>OPENING HOURS</h2>
+                        <li>Monday 12:00PM - 11:00PM</li>
+                        <li>Tuesday 12:00PM - 11:00PM</li>
+                        <li>Wednesday 12:00PM - 11:00PM </li>
+                        <li>Thursday 12:00PM - 11:00PM</li>
+                        <li>Friday 12:00PM - 12:00PM</li>
+                        <li>Saturday 12:00PM - 12:00PM</li>
+                        <li>Sunday 12:00PM - 12:00PM</li>
+                    </ul>
+
+                </div>
+            </div>
+            <div class="col-5 offset-1">
+                <div class="info-content">
+                    <ul>
+                        <h2>CONTACT</h2>
+                        <li><a href="tel:075959522823"><i class="fas fa-phone"></i>07595922823</a></li>
+                        <li><a href="mailto:northyeastbrewing@gmail.com"><i class="fas fa-envelope-square"></i>
+                                <Northyeastbrewing@gmail class="com">Northyeastbrewing@gmail
+                            </a></li>
+                        <li><i class="fas fa-map-marker-alt"></i>76 Sandringham Road, Gosforth, Newcastle<br>
+                            &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;NE3 1QB</li><br><br>
+                        <li><a href="https://www.facebook.com"><i
+                                    class="fab fa-facebook-square"></i>NorthYeastBrewing</a></li>
+                        <li><a href="https://www.twitter.com"><i
+                                    class="fab fa-twitter-square"></i>#northyeastbrewing</a></li>
+                        <li><a href="https://www.youtube.com"><i class="fab fa-youtube-square"></i>northyeastbrewing</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</section>
+<!-- ./Contact info Section -->
+
+<!-- Find Us Section -->
+
+<section class="container">
+    <div class="findus-content">
+        <div class="text-center">
+            <h1>FIND US</h1>
+        </div>
+        <div>
+            <div class="gmap_canvas"><iframe width="100%" height="400px" id="gmap_canvas"
+                    src="https://maps.google.com/maps?q=76%20sandrimham%20road%20&t=&z=11&ie=UTF8&iwloc=&output=embed"
+                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                    href="https://embedgooglemap.net/124/">director</a></div>
+            <style>
+                .mapouter {
+                    position: relative;
+                    text-align: right;
+                    height: 400px;
+                    width: 100%;
+                }
+
+                .gmap_canvas {
+                    overflow: hidden;
+                    background: none !important;
+                    height: 400px;
+                    width: 100%;
+                }
+            </style>
+        </div>
+    </div>
+</section>
+<!-- ./Find Us Section -->
 {% endblock %}
