feat: added view messaging page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -78,7 +78,7 @@
                             festivals. So if you cant make it to the
                             brewery you can try our beer there</p>
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
-                            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Events</button>
+                            <a href="{% url 'events' %}" class="btn btn-primary btn-lg px-4 gap-3">Events</a>
                         </div>
                     </div>
                 </div>
