--- a/newsletter/templates/newsletter/newsletter_success.html
+++ b/newsletter/templates/newsletter/newsletter_success.html
@@ -7,8 +7,7 @@
     <div class="card-body">
         <h5 class="card-title">Your all signed up</h5>
         <p class="card-text">{{ email }} as been added to our mailing list.</p>
-        <a href="#" class="btn btn-primary">Back to shopping</a>
-        <a href="#" class="btn btn-primary">Unsubscribe</a>
+        <a href="{% url 'products' %}" class="btn btn-primary">Back to shopping</a>
     </div>
 </div>
 {% endblock %}
