--- a/templates/base.html
+++ b/templates/base.html
@@ -203,7 +203,8 @@
             <div class="col-md-2 col-sm-12 text-center mt-sm-5 mt-md-0">
                 <h5>Get in Touch</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Contact Us</a></li>
+                    <li class="nav-item mb-2"><a href="{% url 'contact' %}" class="nav-link p-0 text-muted">Contact
+                            Us</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Need a Booking</a></li>
                 </ul>
             </div>
