--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -44,7 +44,7 @@
         </div>
         <div class="contact-forms">
             <!-- Contact Form -->
-            <form method="POST" action="" class="form mb-2" enctype="multipart/form-data">
+            <form method="POST" action="{% url 'contact' %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form | crispy }}
                 <div class="text-center">
