--- a/newsletter/templates/newsletter/view_email_list.html
+++ b/newsletter/templates/newsletter/view_email_list.html
@@ -3,55 +3,61 @@
 
 
 {% block content %}
-<div class="container">
-    <table>
-        <thead>
-            <tr>
-                <th>Mailing list</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for email in email_list %}
-            <tr>
-                <td>{{ email }}</td>
-                <td><small class="ml-3">
+<!-- newsletter signup section -->
+<section id="newletter-sign-up">
+    <div class="container">
+        <div>
+
+            <div>
+                <h1>Mailing list</h1>
+
+            </div>
+
+
+            <ul>
+                {% for email in email_list %}
+                <li>{{ email }}
+                    <small class="ml-3">
                         <a href="#" data-toggle="modal" data-target="#modal{{ email.id }}">Edit</a> |
                         <a class="text-danger" href="{% url 'delete_mail' email.id %}">Delete</a>
                     </small></td>
-            </tr>
-        </tbody>
-    </table>
+                    {% endfor %}
+            </ul>
+        </div>
+    </div>
+</section>
+<!-- ./newsletter signup section -->
 
-    <!-- Modal -->
-    <div class="modal fade" id="modal{{ email.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Edit user email</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form method="POST" action="{% url 'edit_mail' email.id %}" class="form mb-2"
-                        enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Edit address</label>
-                            <input type="email" name="updated-email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp" value="{{ email.email }}" name="updated-email" required>
-                            <button type="submit" class="btn btn-primary">Update
-                                Email</button>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
+{% for email in email_list %}
+<!-- edit email Modal -->
+<div class="modal fade" id="modal{{ email.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Edit user email</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form method="POST" action="{% url 'edit_mail' email.id %}" class="form mb-2"
+                    enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Edit address</label>
+                        <input type="email" name="updated-email" class="form-control" id="exampleInputEmail1"
+                            aria-describedby="emailHelp" value="{{ email.email }}" name="updated-email" required>
+                        <button type="submit" class="btn btn-primary">Update
+                            Email</button>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
-    {% endfor %}
 </div>
+{% endfor %}
 {% endblock %}
