--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -61,9 +61,10 @@
                 <a href="{% url 'send_newsletter' %}" class="dropdown-item">Create Newsletter</a>
                 <a href="{% url 'view_email_list' %}" class="dropdown-item">Newsletter signups</a>
                 <a href="{% url 'add_event' %}" class="dropdown-item">Add Events</a>
+                <a href="{% url 'messages' %}" class="dropdown-item">View Messages</a>
 
                 {% endif %}
-                <a href="" class="dropdown-item">My Profile</a>
+                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                 {% else %}
                 <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
