added bookings app urls view models and html template

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -60,7 +60,7 @@
                             to enjoy. We are open 7 days a
                             week so get yourself down.</p>
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
-                            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Book Now</button>
+                            <a href="{% url 'booking_taproom' %}" class="btn btn-primary btn-lg px-4 gap-3">Book Now</a>
                         </div>
                     </div>
                 </div>
