fix: index.html links fixed

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,8 +22,8 @@
                     we have a great selection of beer,
                     ales and stouts for you to enjoy.
                     check out our selection here</p>
-                <a href="{% url 'products' %}" class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
-                    <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Shop Now</button>
+                <a href="{% url 'products' %}" class="mb-3 btn btn-primary btn-lg px-4 gap-3">
+                    Shop Now
                 </a>
             </div>
         </div>
@@ -41,7 +41,8 @@
                     <h2>Caft Beer</h2>
                     <div class="col-lg-6 mx-auto">
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
-                            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Shop Now</button>
+                            <a type="button" href="{% url 'products' %}" class="btn btn-primary btn-lg px-4 gap-3">Shop
+                                Now</a>
                         </div>
                     </div>
                 </div>
