--- a/home/templates/home/our_story.html
+++ b/home/templates/home/our_story.html
@@ -24,7 +24,7 @@
                     meet the master brewer and then visit the
                     taproom for a taster session.</p>
                 <div>
-                    <a type="button" href="{% url 'book_brew_tour' %}" class="btn btn-primary btn-lg px-4 gap-3">Shop
+                    <a type="button" href="{% url 'book_brew_tour' %}" class="btn btn-primary btn-lg px-4 gap-3">Book
                         Now</a>
                 </div>
             </div>
@@ -57,12 +57,6 @@
 </section>
 <!-- ./brewery section -->
 
-<!-- brewmaster section -->
-<section>
-
-</section>
-<!-- brewmaster section -->
-
 <!-- mission section -->
 <section>
     <div class="row">
@@ -70,16 +64,16 @@
             <h3>Our Mission</h3>
         </div>
     </div>
-    <div class="row" id="story-water-section">
+    <div class="row">
         <div class="col-12 col-lg-4">
-            <div class="row">
-                <div class="col-12 d-flex justify-content-center">
-                    <div class="rounded-circle circle d-none d-md-block" id="water-image"></div>
-                </div>
-            </div>
             <div class="row">
                 <div class="col-12 text-center">
                     <h4>Only the best spring water</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="rounded-circle circle d-none d-md-block" id="water-image"></div>
                 </div>
             </div>
             <div class="row text-center">
@@ -92,15 +86,16 @@
         </div>
         <hr>
 
-        <div class="col-12 col-lg-4" id="story-grains-section">
-            <div class="row">
-                <div class="col-12 d-flex justify-content-center">
-                    <div class="rounded-circle circle d-none d-md-block"></div>
-                </div>
-            </div>
+        <div class="col-12 col-lg-4">
+
             <div class="row">
                 <div class="col-12 text-center">
                     <h4>Fresh Organic Grains</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="rounded-circle circle d-none d-md-block" id="grain-image"></div>
                 </div>
             </div>
             <div class="row text-center">
@@ -116,13 +111,13 @@
 
         <div class="col-12 col-lg-4" id="story-hops-section">
             <div class="row">
-                <div class="col-12 d-flex justify-content-center">
-                    <div class="rounded-circle circle d-none d-md-block"></div>
+                <div class="col-12 text-center">
+                    <h4>Aromatic Hops</h4>
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 text-center">
-                    <h4>Aromatic Hops</h4>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="rounded-circle circle d-none d-md-block" id="hop-image"></div>
                 </div>
             </div>
             <div class="row text-center">
